k8s/app.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: userservice
spec:
  containers:
    - name: userservice
      image: sneha0911/userservice:latest
      ports:
        - containerPort: 8099
