k8s/database.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice-db-h # The "h" stands for headless
spec:
  clusterIP: None        # THIS IS THE SECRET SAUCE
  selector:
    app: userservice-db  # Must match the DB pods
  ports:
    - port: 5432
