k8s/app.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
spec:
  rules:
    - host: pabq.pausescape.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami-service
                port:
                  number: 80
          - path: /userservice
            pathType: Prefix
            backend:
              service:
                name: userservice
                port:
                  number: 80
